added classes and some tests

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha specs",
     "start": "node server.js",
     "server:dev": "nodemon server.js",
     "seeds": "mongo < ./db/seeds.js"
@@ -18,6 +18,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "mocha": "^9.0.3",
     "mongodb": "^3.6.10"
   }
 }
