--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "mocha specs",
     "start": "node server.js",
     "server:dev": "nodemon server.js",
-    "seeds": "mongo < ./db/seeds.js"
+    "seeds": "node db/populate.js"
   },
   "keywords": [],
   "author": "",
