--- a/charity_client/package.json
+++ b/charity_client/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "client",
+  "name": "charity_client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-leaflet/core": "^1.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "leaflet": "^1.7.1",
     "react": "^17.0.2",
-    "react-collapsible": "^2.8.3",
     "react-dom": "^17.0.2",
-    "react-leaflet": "^3.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
