--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-collapsible": "^2.8.3",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.1.0",
